tdf#105490: writerfilter exception - ULSpace must be >= 0

Instead of a minimal margin, default margins were being applied
because an exception was thrown when trying to set a negative
value to top and bottom margins in SvxULSpaceItem::PutValue

Change-Id: I0a9fc2c7cb996efbd26abfdbed27ea0bcb86d9a5
Reviewed-on: https://gerrit.libreoffice.org/34598
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>